# eth-river-project

./: .gitignore  DECISIONS.md  LICENSE  README.md  eth_river_vis.pde  pyproject.toml  requirements.txt  utils.py
.github/: copilot-instructions.md
Infrastructure/FWX120/: .gitignore  config.txt
Infrastructure/Ubuntu/: 99-eth-river.yaml
analyzer/: .env.template  .gitignore  main.py  osc_receiver.py  pyproject.toml  requirements.txt  utils.py
analyzer/pipeline/: link_layer.py  network_layer.py
analyzer/pipeline/application_layer/: default_handler.py  dns_handler.py  http_handler.py  tls_handler.py
analyzer/pipeline/transport_layer/: tcp_handler.py  udp_handler.py
captive-server/: .gitignore  docker-compose.yml
captive-server/app/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
captive-server/nginx/: default.conf
captive-server/static/: index.html
captive-server/templates/: post.html
docs/: .gitignore  ARCHITECTURE.md  COLOR-MAP.md  CPU_thread.md  INFRASTRUCTURE.md  PACKET_DATA.md  PRESENTATION.md  TODO.md  USER_EXPERIENCE.md  instructions_for_analyzer.md  instructions_for_main.md  instructions_for_vis.md  instructions_for_visualizer.md  main_for_vis.md  summary.md
docs/ideas/: node-flow-idea.md  particle-idea.md
eth-river/: .gitignore  DECISIONS.md  README.md  TEST_DATA.md  main.py  osc_receiver.py  requirements.txt  utils.py
eth_river/: .gitignore  main.py
eth_river/note/: main.md
eth_river_vis/: README.md  settings.gradle.kts
visualizer/: .env.template  .gitignore  build.gradle.kts  settings.gradle.kts
(+23 files in other folders)
