[project]
name = "eth-river"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs==1.4.4",
    "lxml==6.0.2",
    "packaging==25.0",
    "pyshark==0.6",
    "python-dotenv>=1.2.1",
    "python-osc==1.9.3",
    "termcolor==3.2.0",
]
